# ChangeLog for app-accessibility/at-spi2-atk
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-atk/ChangeLog,v 1.62 2014/12/14 22:22:28 eva Exp $

  14 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
  at-spi2-atk-2.14.1.ebuild:
  Restore dropped keyword.

*at-spi2-atk-2.14.1 (14 Dec 2014)

  14 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +at-spi2-atk-2.14.1.ebuild:
  Version bump for Gnome 3.14.

  24 Nov 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  at-spi2-atk-2.12.1-r1.ebuild:
  Avoid file collision with emul-linux-x86-gtklibs

*at-spi2-atk-2.12.1-r1 (22 Nov 2014)

  22 Nov 2014; Michał Górny <mgorny@gentoo.org> +at-spi2-atk-2.12.1-r1.ebuild:
  Introduce multilib support as needed for x11-libs/gtk+:3.

  11 Oct 2014; Markus Meier <maekke@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for HPPA (bug #512012).

  04 Aug 2014; Christoph Junghans <ottxor@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  added ~x86-macos (tested by me)

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> at-spi2-atk-2.12.1.ebuild:
  Stable for amd64, wrt bug #512912

*at-spi2-atk-2.12.1 (27 Apr 2014)
