@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/at-spi2-atk
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-atk/ChangeLog,v 1.62 2014/12/14 22:22:28 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-atk/ChangeLog,v 1.63 2014/12/29 07:42:42 eva Exp $
+
+  29 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
+  -at-spi2-atk-2.10.2.ebuild, at-spi2-atk-2.12.1.ebuild,
+  at-spi2-atk-2.12.1-r1.ebuild, at-spi2-atk-2.14.1.ebuild:
+  Unset DBUS_SESSION_BUS_ADDRESS to run unittests, bug #449010.
 
   14 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
   at-spi2-atk-2.14.1.ebuild:
